--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -10,7 +10,7 @@
     right: 0;
     bottom: 0;
     top: 0;
-    /* overflow: auto; */
+    overflow: auto;
     /* cursor: url('../img/icons8-rounded-square-30.png'), auto; */
 }
 
